Footer and header css styling complete for tablet and desktop sizing. Fixed an issue where homepage classname tags were overlapping with another pages

--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -35,3 +35,14 @@
     text-align: right;
 }
 
+@media only screen and (min-width: 40rem) {
+    .footerGridPadding {
+        padding: 2rem 5rem;
+    }
+}
+
+@media only screen and (min-width: 70rem) {
+    .footerGridPadding {
+        padding: 2rem 4.375;
+    }
+}
