--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -65,7 +65,13 @@ a {
         min-height: 5rem;
         display: grid;
         align-items: center;
-        padding: 0 2rem;
+        padding: 0 5rem;
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media only screen and (min-width: 70rem) {
+    .navBar {
+        padding: 0 4.375rem;
     }
 }
